<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBack"
    tools:context=".activity.SuccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="812"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="150"
            android:background="@color/colorMainBlue"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="812"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="90"
            android:gravity="center">

            <TextView
                style="@style/txt.white.20"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/sign_welcome"/>

            <TextView
                android:layout_marginStart="4dp"
                style="@style/txt.white.20"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/app_name"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="600"
            android:elevation="2dp"
            app:cardBackgroundColor="@color/colorMainWhite"
            app:cardCornerRadius="12sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/txt.gray.25"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/success_thank_you"/>

                <ImageView
                    android:layout_marginTop="30dp"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:src="@drawable/ic_check_circle_green"/>

                <TextView
                    style="@style/txt.gray.25"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginTop="@dimen/txt_60"
                    android:textAlignment="center"
                    android:text="@string/success_detail"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>